--- a/public/index.html
+++ b/public/index.html
@@ -1,25 +1,44 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Hello World Loader</title>
-    <link rel="stylesheet" href="/styles.css" />
+    <title>Good bye, World!</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;600&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./styles.css" />
   </head>
   <body>
-    <div class="background"></div>
-    <main class="loader">
-      <div class="glow"></div>
-      <div class="ring">
-        <div class="dot"></div>
+    <div class="bg-overlay"></div>
+    <main class="hero">
+      <div class="content">
+        <p class="eyebrow">Counting down to September 1, 2028</p>
+        <h1>Good bye, World!</h1>
+        <p class="description">
+          Time left until the next chapter begins:
+        </p>
+        <div class="countdown" aria-live="polite">
+          <div class="segment">
+            <span class="value" id="days">0</span>
+            <span class="label">Days</span>
+          </div>
+          <div class="separator">:</div>
+          <div class="segment">
+            <span class="value" id="hours">00</span>
+            <span class="label">Hours</span>
+          </div>
+          <div class="separator">:</div>
+          <div class="segment">
+            <span class="value" id="seconds">0000</span>
+            <span class="label">Seconds</span>
+          </div>
+        </div>
       </div>
-      <h1 class="headline" aria-live="polite" aria-label="Hello, World! loading animation">
-        <span>H</span><span>e</span><span>l</span><span>l</span><span>o</span>
-        <span class="space"></span>
-        <span>W</span><span>o</span><span>r</span><span>l</span><span>d</span><span>!</span>
-      </h1>
-      <p class="subhead">Loading your experience...</p>
     </main>
-    <script type="module" src="/script.js"></script>
+    <script src="./script.js"></script>
   </body>
 </html>
